--- a/lesson1.1.html
+++ b/lesson1.1.html
@@ -1,105 +1,125 @@
-<h1>World Cup 2018</h1>
-<!-- <ul>
-  <ol>1.html</ol>
-  <ol>2.css</ol>
-  <ol>3.javaScript</ol>
-</ul> -->
-
-<ol>
-  <li>html</li>
-  <li>css</li>
-  <li>javaScript</li>
-</ol>
-<br>
-<pre>
-</pre>
-
-<ul>
-  <li>KIM SUYEON</li>
-  <li>KIM MUNJEONG</li>
-  <li>KIM JEEYOUNG</li>
-  <li>JEON JOOHYEON</li>
-</ul>
-<p>
-
-  Cascading Style Sheets (CSS)
-  CSS-shade.svg
-  Filename extension	.css
-  Internet media type	text/css
-  Uniform Type Identifier (UTI)	public.css
-  Developed by
-  Håkon Wium LieBert BosWorld Wide Web Consortium
-  Initial release	December 17, 1996; 21 years ago
-  Type of format	Style sheet language
-  Standards
-  Level 1 (Recommendation)
-  Level 2 (ditto)
-  Level 2 Revision 1 (ditto)
-  Cascading Style Sheets
-  Style sheet
-  CSS Zen Garden The Zen of CSS Design
-  CSS box model Internet Explorer box model bug
-  CSSTidy Dynamic CSS
-  Comparisons
-  CSS support Stylesheet languages
-  Web design
-  Tableless "Holy grail" Responsive
-  Wikibooks page Cascading Style Sheets
-  vte
-  HTML
-  HTML Dynamic HTML HTML5 audio canvas video XHTML Basic Mobile Profile C-HTML HTML element span and div HTML attribute HTML frame HTML editor Character encodings Unicode Language code Document Object Model Browser Object Model Style sheets CSS Font family Web colors HTML scripting JavaScript WebGL WebCL W3C Validator WHATWG Quirks mode Web storage Rendering engine
-  Comparisons
-  Document markup languages HTML support XHTML 1.1
-  vte
-  Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.[2]
-
-  CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts.[3] This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, and reduce complexity and repetition in the structural content.
-
-  Separation of formatting and content also makes it feasible to present the same markup page in different styles for different rendering methods, such as on-screen, in print, by voice (via speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules for alternate formatting if the content is accessed on a mobile device.[4]
-
-  The name cascading comes from the specified priority scheme to determine which style rule applies if more than one rule matches a particular element. This cascading priority scheme is predictable.
-
-  The CSS specifications are maintained by the World Wide Web Consortium (W3C). Internet media type (MIME type) text/css is registered for use with CSS by RFC 2318 (March 1998). The W3C operates a free CSS validation service for CSS documents.[5]
-
-  In addition to HTML, other markup languages support the use of CSS, including XHTML, plain XML, SVG, and XUL.
-
-</p>
-
-
-<p>
-  <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
-  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-  (function(){
-  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-  s1.async=true;
-  s1.src='https://embed.tawk.to/5b4d494a91379020b95eec16/default';
-  s1.charset='UTF-8';
-  s1.setAttribute('crossorigin','*');
-  s0.parentNode.insertBefore(s1,s0);
-  })();
-  </script>
-  <!--End of Tawk.to Script-->
-</p>
-
-
-<div id="disqus_thread"></div>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122479210-1"></script>
 <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://senate-cambodia.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
+  gtag('config', 'UA-122479210-1');
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+  </head>
+  <body>
+    <h1>World Cup 2018</h1>
+    <!-- <ul>
+      <ol>1.html</ol>
+      <ol>2.css</ol>
+      <ol>3.javaScript</ol>
+    </ul> -->
+
+    <ol>
+      <li>html</li>
+      <li>css</li>
+      <li>javaScript</li>
+    </ol>
+    <br>
+    <pre>
+    </pre>
+
+    <ul>
+      <li>KIM SUYEON</li>
+      <li>KIM MUNJEONG</li>
+      <li>KIM JEEYOUNG</li>
+      <li>JEON JOOHYEON</li>
+    </ul>
+    <p>
+
+      Cascading Style Sheets (CSS)
+      CSS-shade.svg
+      Filename extension	.css
+      Internet media type	text/css
+      Uniform Type Identifier (UTI)	public.css
+      Developed by
+      Håkon Wium LieBert BosWorld Wide Web Consortium
+      Initial release	December 17, 1996; 21 years ago
+      Type of format	Style sheet language
+      Standards
+      Level 1 (Recommendation)
+      Level 2 (ditto)
+      Level 2 Revision 1 (ditto)
+      Cascading Style Sheets
+      Style sheet
+      CSS Zen Garden The Zen of CSS Design
+      CSS box model Internet Explorer box model bug
+      CSSTidy Dynamic CSS
+      Comparisons
+      CSS support Stylesheet languages
+      Web design
+      Tableless "Holy grail" Responsive
+      Wikibooks page Cascading Style Sheets
+      vte
+      HTML
+      HTML Dynamic HTML HTML5 audio canvas video XHTML Basic Mobile Profile C-HTML HTML element span and div HTML attribute HTML frame HTML editor Character encodings Unicode Language code Document Object Model Browser Object Model Style sheets CSS Font family Web colors HTML scripting JavaScript WebGL WebCL W3C Validator WHATWG Quirks mode Web storage Rendering engine
+      Comparisons
+      Document markup languages HTML support XHTML 1.1
+      vte
+      Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.[2]
+
+      CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts.[3] This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, and reduce complexity and repetition in the structural content.
+
+      Separation of formatting and content also makes it feasible to present the same markup page in different styles for different rendering methods, such as on-screen, in print, by voice (via speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules for alternate formatting if the content is accessed on a mobile device.[4]
+
+      The name cascading comes from the specified priority scheme to determine which style rule applies if more than one rule matches a particular element. This cascading priority scheme is predictable.
+
+      The CSS specifications are maintained by the World Wide Web Consortium (W3C). Internet media type (MIME type) text/css is registered for use with CSS by RFC 2318 (March 1998). The W3C operates a free CSS validation service for CSS documents.[5]
+
+      In addition to HTML, other markup languages support the use of CSS, including XHTML, plain XML, SVG, and XUL.
+
+    </p>
+
+
+    <p>
+      <!--Start of Tawk.to Script-->
+      <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/5b4d494a91379020b95eec16/default';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+      </script>
+      <!--End of Tawk.to Script-->
+    </p>
+
+
+    <div id="disqus_thread"></div>
+    <script>
+
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://senate-cambodia.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+  </body>
+</html>
