--- a/lesson2.html
+++ b/lesson2.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <title>HTML-WEB1</title>
     <link rel="stylesheet" href="css/cssbg.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122479210-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-122479210-1');
+</script>
+
   </head>
   <body>
     <p>
