--- a/index.html
+++ b/index.html
@@ -15,21 +15,39 @@
   gtag('config', 'UA-122479210-1');
 </script>
 
+<style>
+  a{
+    color: red;
+    /* text-decoration: none; */
+  }
+
+
+</style>
+
   </head>
   <body>
 
 
 
     សួរសី្តកម្ពុជា ពេលព្រឹក <br>
-    <a href="https://www.w3.org/TR/html5/">
+    <a href="https://www.w3.org/TR/html5/"> <h3><font color="">HTML documents</font></h3>
         <h1>HTML documents</h1>
     </a>
-    <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html"><font color="">WEB</font></a></h1>
     <ol>
-      <li><a href="lesson1.html">html</a></li>
-      <li><a href="lesson1.1.html">css</a></li>
-      <li> <a href="lesson2.html">javaScript</a></li>
+      <li><a href="lesson1.html"><font color="">html</font></a></li>
+      <li style="color:blue"><a href="lesson1.1.html" style="text-decoration:underline">css</a></li>
+      <li> <a href="lesson2.html"><font color="">javaScript</font></a></li>
     </ol>
+
+
+    <!-- <ol>
+      <li><a href="lesson1.html"><font color="red">html</font></a></li>
+      <li><a href="lesson1.1.html"><font color="red">css</font></a></li>
+      <li> <a href="lesson2.html"><font color="red">javaScript</font></a></li>
+    </ol> -->
+
+
     <br>
     <pre>
     </pre>
